CSS Fix: Fees, averagePrice and Times aligned properly.

--- a/dex/src/css/LongTermOrderCard.module.css
+++ b/dex/src/css/LongTermOrderCard.module.css
@@ -122,7 +122,7 @@
 .extrasContainerOne {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 50%;
   gap: 5px;
 }
 
@@ -131,7 +131,7 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
-  width: fit-content;
+  width: 100%;
 }
 
 .fees,
@@ -242,5 +242,10 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+  }
+
+  .extrasContainerOne,
+  .extrasContainer {
+    width: 70%;
   }
 }
